test/parse/func/bad-func-name.txt
;;; ERROR: 1
(module
  (func foo))
(;; STDERR ;;;
out/test/parse/func/bad-func-name.txt:3:9: error: unexpected token foo, expected ).
  (func foo))
        ^^^
;;; STDERR ;;)
